// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`PackageExtractor should extract project with script linkCreation 1`] = `
Object {
  "files": Array [
    "build-tests/package-extractor-test-01/.rush/temp/shrinkwrap-deps.json",
    "build-tests/package-extractor-test-01/package.json",
    "build-tests/package-extractor-test-01/src/index.js",
    "build-tests/package-extractor-test-01/src/subdir/file.js",
    "build-tests/package-extractor-test-02/.rush/temp/shrinkwrap-deps.json",
    "build-tests/package-extractor-test-02/package.json",
    "build-tests/package-extractor-test-02/src/index.js",
    "build-tests/package-extractor-test-03/.rush/temp/shrinkwrap-deps.json",
    "build-tests/package-extractor-test-03/package.json",
    "build-tests/package-extractor-test-03/src/index.js",
    "common/temp/default/node_modules/.pnpm/@types+node@17.0.41/node_modules/@types/node/LICENSE",
    "common/temp/default/node_modules/.pnpm/@types+node@17.0.41/node_modules/@types/node/README.md",
    "common/temp/default/node_modules/.pnpm/@types+node@17.0.41/node_modules/@types/node/assert.d.ts",
    "common/temp/default/node_modules/.pnpm/@types+node@17.0.41/node_modules/@types/node/assert/strict.d.ts",
    "common/temp/default/node_modules/.pnpm/@types+node@17.0.41/node_modules/@types/node/async_hooks.d.ts",
    "common/temp/default/node_modules/.pnpm/@types+node@17.0.41/node_modules/@types/node/buffer.d.ts",
    "common/temp/default/node_modules/.pnpm/@types+node@17.0.41/node_modules/@types/node/child_process.d.ts",
    "common/temp/default/node_modules/.pnpm/@types+node@17.0.41/node_modules/@types/node/cluster.d.ts",
    "common/temp/default/node_modules/.pnpm/@types+node@17.0.41/node_modules/@types/node/console.d.ts",
    "common/temp/default/node_modules/.pnpm/@types+node@17.0.41/node_modules/@types/node/constants.d.ts",
    "common/temp/default/node_modules/.pnpm/@types+node@17.0.41/node_modules/@types/node/crypto.d.ts",
    "common/temp/default/node_modules/.pnpm/@types+node@17.0.41/node_modules/@types/node/dgram.d.ts",
    "common/temp/default/node_modules/.pnpm/@types+node@17.0.41/node_modules/@types/node/diagnostics_channel.d.ts",
    "common/temp/default/node_modules/.pnpm/@types+node@17.0.41/node_modules/@types/node/dns.d.ts",
    "common/temp/default/node_modules/.pnpm/@types+node@17.0.41/node_modules/@types/node/dns/promises.d.ts",
    "common/temp/default/node_modules/.pnpm/@types+node@17.0.41/node_modules/@types/node/domain.d.ts",
    "common/temp/default/node_modules/.pnpm/@types+node@17.0.41/node_modules/@types/node/events.d.ts",
    "common/temp/default/node_modules/.pnpm/@types+node@17.0.41/node_modules/@types/node/fs.d.ts",
    "common/temp/default/node_modules/.pnpm/@types+node@17.0.41/node_modules/@types/node/fs/promises.d.ts",
    "common/temp/default/node_modules/.pnpm/@types+node@17.0.41/node_modules/@types/node/globals.d.ts",
    "common/temp/default/node_modules/.pnpm/@types+node@17.0.41/node_modules/@types/node/globals.global.d.ts",
    "common/temp/default/node_modules/.pnpm/@types+node@17.0.41/node_modules/@types/node/http.d.ts",
    "common/temp/default/node_modules/.pnpm/@types+node@17.0.41/node_modules/@types/node/http2.d.ts",
    "common/temp/default/node_modules/.pnpm/@types+node@17.0.41/node_modules/@types/node/https.d.ts",
    "common/temp/default/node_modules/.pnpm/@types+node@17.0.41/node_modules/@types/node/index.d.ts",
    "common/temp/default/node_modules/.pnpm/@types+node@17.0.41/node_modules/@types/node/inspector.d.ts",
    "common/temp/default/node_modules/.pnpm/@types+node@17.0.41/node_modules/@types/node/module.d.ts",
    "common/temp/default/node_modules/.pnpm/@types+node@17.0.41/node_modules/@types/node/net.d.ts",
    "common/temp/default/node_modules/.pnpm/@types+node@17.0.41/node_modules/@types/node/os.d.ts",
    "common/temp/default/node_modules/.pnpm/@types+node@17.0.41/node_modules/@types/node/package.json",
    "common/temp/default/node_modules/.pnpm/@types+node@17.0.41/node_modules/@types/node/path.d.ts",
    "common/temp/default/node_modules/.pnpm/@types+node@17.0.41/node_modules/@types/node/perf_hooks.d.ts",
    "common/temp/default/node_modules/.pnpm/@types+node@17.0.41/node_modules/@types/node/process.d.ts",
    "common/temp/default/node_modules/.pnpm/@types+node@17.0.41/node_modules/@types/node/punycode.d.ts",
    "common/temp/default/node_modules/.pnpm/@types+node@17.0.41/node_modules/@types/node/querystring.d.ts",
    "common/temp/default/node_modules/.pnpm/@types+node@17.0.41/node_modules/@types/node/readline.d.ts",
    "common/temp/default/node_modules/.pnpm/@types+node@17.0.41/node_modules/@types/node/repl.d.ts",
    "common/temp/default/node_modules/.pnpm/@types+node@17.0.41/node_modules/@types/node/stream.d.ts",
    "common/temp/default/node_modules/.pnpm/@types+node@17.0.41/node_modules/@types/node/stream/consumers.d.ts",
    "common/temp/default/node_modules/.pnpm/@types+node@17.0.41/node_modules/@types/node/stream/promises.d.ts",
    "common/temp/default/node_modules/.pnpm/@types+node@17.0.41/node_modules/@types/node/stream/web.d.ts",
    "common/temp/default/node_modules/.pnpm/@types+node@17.0.41/node_modules/@types/node/string_decoder.d.ts",
    "common/temp/default/node_modules/.pnpm/@types+node@17.0.41/node_modules/@types/node/timers.d.ts",
    "common/temp/default/node_modules/.pnpm/@types+node@17.0.41/node_modules/@types/node/timers/promises.d.ts",
    "common/temp/default/node_modules/.pnpm/@types+node@17.0.41/node_modules/@types/node/tls.d.ts",
    "common/temp/default/node_modules/.pnpm/@types+node@17.0.41/node_modules/@types/node/trace_events.d.ts",
    "common/temp/default/node_modules/.pnpm/@types+node@17.0.41/node_modules/@types/node/tty.d.ts",
    "common/temp/default/node_modules/.pnpm/@types+node@17.0.41/node_modules/@types/node/url.d.ts",
    "common/temp/default/node_modules/.pnpm/@types+node@17.0.41/node_modules/@types/node/util.d.ts",
    "common/temp/default/node_modules/.pnpm/@types+node@17.0.41/node_modules/@types/node/v8.d.ts",
    "common/temp/default/node_modules/.pnpm/@types+node@17.0.41/node_modules/@types/node/vm.d.ts",
    "common/temp/default/node_modules/.pnpm/@types+node@17.0.41/node_modules/@types/node/wasi.d.ts",
    "common/temp/default/node_modules/.pnpm/@types+node@17.0.41/node_modules/@types/node/worker_threads.d.ts",
    "common/temp/default/node_modules/.pnpm/@types+node@17.0.41/node_modules/@types/node/zlib.d.ts",
    "common/temp/default/node_modules/.pnpm/@types+node@18.17.15/node_modules/@types/node/LICENSE",
    "common/temp/default/node_modules/.pnpm/@types+node@18.17.15/node_modules/@types/node/README.md",
    "common/temp/default/node_modules/.pnpm/@types+node@18.17.15/node_modules/@types/node/assert.d.ts",
    "common/temp/default/node_modules/.pnpm/@types+node@18.17.15/node_modules/@types/node/assert/strict.d.ts",
    "common/temp/default/node_modules/.pnpm/@types+node@18.17.15/node_modules/@types/node/async_hooks.d.ts",
    "common/temp/default/node_modules/.pnpm/@types+node@18.17.15/node_modules/@types/node/buffer.d.ts",
    "common/temp/default/node_modules/.pnpm/@types+node@18.17.15/node_modules/@types/node/child_process.d.ts",
    "common/temp/default/node_modules/.pnpm/@types+node@18.17.15/node_modules/@types/node/cluster.d.ts",
    "common/temp/default/node_modules/.pnpm/@types+node@18.17.15/node_modules/@types/node/console.d.ts",
    "common/temp/default/node_modules/.pnpm/@types+node@18.17.15/node_modules/@types/node/constants.d.ts",
    "common/temp/default/node_modules/.pnpm/@types+node@18.17.15/node_modules/@types/node/crypto.d.ts",
    "common/temp/default/node_modules/.pnpm/@types+node@18.17.15/node_modules/@types/node/dgram.d.ts",
    "common/temp/default/node_modules/.pnpm/@types+node@18.17.15/node_modules/@types/node/diagnostics_channel.d.ts",
    "common/temp/default/node_modules/.pnpm/@types+node@18.17.15/node_modules/@types/node/dns.d.ts",
    "common/temp/default/node_modules/.pnpm/@types+node@18.17.15/node_modules/@types/node/dns/promises.d.ts",
    "common/temp/default/node_modules/.pnpm/@types+node@18.17.15/node_modules/@types/node/dom-events.d.ts",
    "common/temp/default/node_modules/.pnpm/@types+node@18.17.15/node_modules/@types/node/domain.d.ts",
    "common/temp/default/node_modules/.pnpm/@types+node@18.17.15/node_modules/@types/node/events.d.ts",
    "common/temp/default/node_modules/.pnpm/@types+node@18.17.15/node_modules/@types/node/fs.d.ts",
    "common/temp/default/node_modules/.pnpm/@types+node@18.17.15/node_modules/@types/node/fs/promises.d.ts",
    "common/temp/default/node_modules/.pnpm/@types+node@18.17.15/node_modules/@types/node/globals.d.ts",
    "common/temp/default/node_modules/.pnpm/@types+node@18.17.15/node_modules/@types/node/globals.global.d.ts",
    "common/temp/default/node_modules/.pnpm/@types+node@18.17.15/node_modules/@types/node/http.d.ts",
    "common/temp/default/node_modules/.pnpm/@types+node@18.17.15/node_modules/@types/node/http2.d.ts",
    "common/temp/default/node_modules/.pnpm/@types+node@18.17.15/node_modules/@types/node/https.d.ts",
    "common/temp/default/node_modules/.pnpm/@types+node@18.17.15/node_modules/@types/node/index.d.ts",
    "common/temp/default/node_modules/.pnpm/@types+node@18.17.15/node_modules/@types/node/inspector.d.ts",
    "common/temp/default/node_modules/.pnpm/@types+node@18.17.15/node_modules/@types/node/module.d.ts",
    "common/temp/default/node_modules/.pnpm/@types+node@18.17.15/node_modules/@types/node/net.d.ts",
    "common/temp/default/node_modules/.pnpm/@types+node@18.17.15/node_modules/@types/node/os.d.ts",
    "common/temp/default/node_modules/.pnpm/@types+node@18.17.15/node_modules/@types/node/package.json",
    "common/temp/default/node_modules/.pnpm/@types+node@18.17.15/node_modules/@types/node/path.d.ts",
    "common/temp/default/node_modules/.pnpm/@types+node@18.17.15/node_modules/@types/node/perf_hooks.d.ts",
    "common/temp/default/node_modules/.pnpm/@types+node@18.17.15/node_modules/@types/node/process.d.ts",
    "common/temp/default/node_modules/.pnpm/@types+node@18.17.15/node_modules/@types/node/punycode.d.ts",
    "common/temp/default/node_modules/.pnpm/@types+node@18.17.15/node_modules/@types/node/querystring.d.ts",
    "common/temp/default/node_modules/.pnpm/@types+node@18.17.15/node_modules/@types/node/readline.d.ts",
    "common/temp/default/node_modules/.pnpm/@types+node@18.17.15/node_modules/@types/node/readline/promises.d.ts",
    "common/temp/default/node_modules/.pnpm/@types+node@18.17.15/node_modules/@types/node/repl.d.ts",
    "common/temp/default/node_modules/.pnpm/@types+node@18.17.15/node_modules/@types/node/stream.d.ts",
    "common/temp/default/node_modules/.pnpm/@types+node@18.17.15/node_modules/@types/node/stream/consumers.d.ts",
    "common/temp/default/node_modules/.pnpm/@types+node@18.17.15/node_modules/@types/node/stream/promises.d.ts",
    "common/temp/default/node_modules/.pnpm/@types+node@18.17.15/node_modules/@types/node/stream/web.d.ts",
    "common/temp/default/node_modules/.pnpm/@types+node@18.17.15/node_modules/@types/node/string_decoder.d.ts",
    "common/temp/default/node_modules/.pnpm/@types+node@18.17.15/node_modules/@types/node/test.d.ts",
    "common/temp/default/node_modules/.pnpm/@types+node@18.17.15/node_modules/@types/node/timers.d.ts",
    "common/temp/default/node_modules/.pnpm/@types+node@18.17.15/node_modules/@types/node/timers/promises.d.ts",
    "common/temp/default/node_modules/.pnpm/@types+node@18.17.15/node_modules/@types/node/tls.d.ts",
    "common/temp/default/node_modules/.pnpm/@types+node@18.17.15/node_modules/@types/node/trace_events.d.ts",
    "common/temp/default/node_modules/.pnpm/@types+node@18.17.15/node_modules/@types/node/ts4.8/assert.d.ts",
    "common/temp/default/node_modules/.pnpm/@types+node@18.17.15/node_modules/@types/node/ts4.8/assert/strict.d.ts",
    "common/temp/default/node_modules/.pnpm/@types+node@18.17.15/node_modules/@types/node/ts4.8/async_hooks.d.ts",
    "common/temp/default/node_modules/.pnpm/@types+node@18.17.15/node_modules/@types/node/ts4.8/buffer.d.ts",
    "common/temp/default/node_modules/.pnpm/@types+node@18.17.15/node_modules/@types/node/ts4.8/child_process.d.ts",
    "common/temp/default/node_modules/.pnpm/@types+node@18.17.15/node_modules/@types/node/ts4.8/cluster.d.ts",
    "common/temp/default/node_modules/.pnpm/@types+node@18.17.15/node_modules/@types/node/ts4.8/console.d.ts",
    "common/temp/default/node_modules/.pnpm/@types+node@18.17.15/node_modules/@types/node/ts4.8/constants.d.ts",
    "common/temp/default/node_modules/.pnpm/@types+node@18.17.15/node_modules/@types/node/ts4.8/crypto.d.ts",
    "common/temp/default/node_modules/.pnpm/@types+node@18.17.15/node_modules/@types/node/ts4.8/dgram.d.ts",
    "common/temp/default/node_modules/.pnpm/@types+node@18.17.15/node_modules/@types/node/ts4.8/diagnostics_channel.d.ts",
    "common/temp/default/node_modules/.pnpm/@types+node@18.17.15/node_modules/@types/node/ts4.8/dns.d.ts",
    "common/temp/default/node_modules/.pnpm/@types+node@18.17.15/node_modules/@types/node/ts4.8/dns/promises.d.ts",
    "common/temp/default/node_modules/.pnpm/@types+node@18.17.15/node_modules/@types/node/ts4.8/dom-events.d.ts",
    "common/temp/default/node_modules/.pnpm/@types+node@18.17.15/node_modules/@types/node/ts4.8/domain.d.ts",
    "common/temp/default/node_modules/.pnpm/@types+node@18.17.15/node_modules/@types/node/ts4.8/events.d.ts",
    "common/temp/default/node_modules/.pnpm/@types+node@18.17.15/node_modules/@types/node/ts4.8/fs.d.ts",
    "common/temp/default/node_modules/.pnpm/@types+node@18.17.15/node_modules/@types/node/ts4.8/fs/promises.d.ts",
    "common/temp/default/node_modules/.pnpm/@types+node@18.17.15/node_modules/@types/node/ts4.8/globals.d.ts",
    "common/temp/default/node_modules/.pnpm/@types+node@18.17.15/node_modules/@types/node/ts4.8/globals.global.d.ts",
    "common/temp/default/node_modules/.pnpm/@types+node@18.17.15/node_modules/@types/node/ts4.8/http.d.ts",
    "common/temp/default/node_modules/.pnpm/@types+node@18.17.15/node_modules/@types/node/ts4.8/http2.d.ts",
    "common/temp/default/node_modules/.pnpm/@types+node@18.17.15/node_modules/@types/node/ts4.8/https.d.ts",
    "common/temp/default/node_modules/.pnpm/@types+node@18.17.15/node_modules/@types/node/ts4.8/index.d.ts",
    "common/temp/default/node_modules/.pnpm/@types+node@18.17.15/node_modules/@types/node/ts4.8/inspector.d.ts",
    "common/temp/default/node_modules/.pnpm/@types+node@18.17.15/node_modules/@types/node/ts4.8/module.d.ts",
    "common/temp/default/node_modules/.pnpm/@types+node@18.17.15/node_modules/@types/node/ts4.8/net.d.ts",
    "common/temp/default/node_modules/.pnpm/@types+node@18.17.15/node_modules/@types/node/ts4.8/os.d.ts",
    "common/temp/default/node_modules/.pnpm/@types+node@18.17.15/node_modules/@types/node/ts4.8/path.d.ts",
    "common/temp/default/node_modules/.pnpm/@types+node@18.17.15/node_modules/@types/node/ts4.8/perf_hooks.d.ts",
    "common/temp/default/node_modules/.pnpm/@types+node@18.17.15/node_modules/@types/node/ts4.8/process.d.ts",
    "common/temp/default/node_modules/.pnpm/@types+node@18.17.15/node_modules/@types/node/ts4.8/punycode.d.ts",
    "common/temp/default/node_modules/.pnpm/@types+node@18.17.15/node_modules/@types/node/ts4.8/querystring.d.ts",
    "common/temp/default/node_modules/.pnpm/@types+node@18.17.15/node_modules/@types/node/ts4.8/readline.d.ts",
    "common/temp/default/node_modules/.pnpm/@types+node@18.17.15/node_modules/@types/node/ts4.8/readline/promises.d.ts",
    "common/temp/default/node_modules/.pnpm/@types+node@18.17.15/node_modules/@types/node/ts4.8/repl.d.ts",
    "common/temp/default/node_modules/.pnpm/@types+node@18.17.15/node_modules/@types/node/ts4.8/stream.d.ts",
    "common/temp/default/node_modules/.pnpm/@types+node@18.17.15/node_modules/@types/node/ts4.8/stream/consumers.d.ts",
    "common/temp/default/node_modules/.pnpm/@types+node@18.17.15/node_modules/@types/node/ts4.8/stream/promises.d.ts",
    "common/temp/default/node_modules/.pnpm/@types+node@18.17.15/node_modules/@types/node/ts4.8/stream/web.d.ts",
    "common/temp/default/node_modules/.pnpm/@types+node@18.17.15/node_modules/@types/node/ts4.8/string_decoder.d.ts",
    "common/temp/default/node_modules/.pnpm/@types+node@18.17.15/node_modules/@types/node/ts4.8/test.d.ts",
    "common/temp/default/node_modules/.pnpm/@types+node@18.17.15/node_modules/@types/node/ts4.8/timers.d.ts",
    "common/temp/default/node_modules/.pnpm/@types+node@18.17.15/node_modules/@types/node/ts4.8/timers/promises.d.ts",
    "common/temp/default/node_modules/.pnpm/@types+node@18.17.15/node_modules/@types/node/ts4.8/tls.d.ts",
    "common/temp/default/node_modules/.pnpm/@types+node@18.17.15/node_modules/@types/node/ts4.8/trace_events.d.ts",
    "common/temp/default/node_modules/.pnpm/@types+node@18.17.15/node_modules/@types/node/ts4.8/tty.d.ts",
    "common/temp/default/node_modules/.pnpm/@types+node@18.17.15/node_modules/@types/node/ts4.8/url.d.ts",
    "common/temp/default/node_modules/.pnpm/@types+node@18.17.15/node_modules/@types/node/ts4.8/util.d.ts",
    "common/temp/default/node_modules/.pnpm/@types+node@18.17.15/node_modules/@types/node/ts4.8/v8.d.ts",
    "common/temp/default/node_modules/.pnpm/@types+node@18.17.15/node_modules/@types/node/ts4.8/vm.d.ts",
    "common/temp/default/node_modules/.pnpm/@types+node@18.17.15/node_modules/@types/node/ts4.8/wasi.d.ts",
    "common/temp/default/node_modules/.pnpm/@types+node@18.17.15/node_modules/@types/node/ts4.8/worker_threads.d.ts",
    "common/temp/default/node_modules/.pnpm/@types+node@18.17.15/node_modules/@types/node/ts4.8/zlib.d.ts",
    "common/temp/default/node_modules/.pnpm/@types+node@18.17.15/node_modules/@types/node/tty.d.ts",
    "common/temp/default/node_modules/.pnpm/@types+node@18.17.15/node_modules/@types/node/url.d.ts",
    "common/temp/default/node_modules/.pnpm/@types+node@18.17.15/node_modules/@types/node/util.d.ts",
    "common/temp/default/node_modules/.pnpm/@types+node@18.17.15/node_modules/@types/node/v8.d.ts",
    "common/temp/default/node_modules/.pnpm/@types+node@18.17.15/node_modules/@types/node/vm.d.ts",
    "common/temp/default/node_modules/.pnpm/@types+node@18.17.15/node_modules/@types/node/wasi.d.ts",
    "common/temp/default/node_modules/.pnpm/@types+node@18.17.15/node_modules/@types/node/worker_threads.d.ts",
    "common/temp/default/node_modules/.pnpm/@types+node@18.17.15/node_modules/@types/node/zlib.d.ts",
    "create-links.js",
  ],
  "links": Array [
    Object {
      "kind": "folderLink",
      "linkPath": "build-tests/package-extractor-test-01/node_modules/@types/node",
      "targetPath": "common/temp/default/node_modules/.pnpm/@types+node@18.17.15/node_modules/@types/node",
    },
    Object {
      "kind": "folderLink",
      "linkPath": "build-tests/package-extractor-test-01/node_modules/package-extractor-test-02",
      "targetPath": "build-tests/package-extractor-test-02",
    },
    Object {
      "kind": "folderLink",
      "linkPath": "build-tests/package-extractor-test-01/node_modules/package-extractor-test-03",
      "targetPath": "build-tests/package-extractor-test-03",
    },
    Object {
      "kind": "folderLink",
      "linkPath": "build-tests/package-extractor-test-02/node_modules/package-extractor-test-03",
      "targetPath": "build-tests/package-extractor-test-03",
    },
    Object {
      "kind": "folderLink",
      "linkPath": "build-tests/package-extractor-test-03/node_modules/@types/node",
      "targetPath": "common/temp/default/node_modules/.pnpm/@types+node@17.0.41/node_modules/@types/node",
    },
  ],
  "mainProjectName": "package-extractor-test-01",
  "projects": Array [
    Object {
      "path": "build-tests/package-extractor-test-01",
      "projectName": "package-extractor-test-01",
    },
    Object {
      "path": "build-tests/package-extractor-test-02",
      "projectName": "package-extractor-test-02",
    },
    Object {
      "path": "build-tests/package-extractor-test-03",
      "projectName": "package-extractor-test-03",
    },
  ],
}
`;

exports[`PackageExtractor should extract project with script linkCreation and custom linkCreationScriptPath 1`] = `
Object {
  "files": Array [
    "build-tests/package-extractor-test-01/.rush/temp/shrinkwrap-deps.json",
    "build-tests/package-extractor-test-01/package.json",
    "build-tests/package-extractor-test-01/src/index.js",
    "build-tests/package-extractor-test-01/src/subdir/file.js",
    "build-tests/package-extractor-test-02/.rush/temp/shrinkwrap-deps.json",
    "build-tests/package-extractor-test-02/package.json",
    "build-tests/package-extractor-test-02/src/index.js",
    "build-tests/package-extractor-test-03/.rush/temp/shrinkwrap-deps.json",
    "build-tests/package-extractor-test-03/package.json",
    "build-tests/package-extractor-test-03/src/index.js",
    "common/temp/default/node_modules/.pnpm/@types+node@17.0.41/node_modules/@types/node/LICENSE",
    "common/temp/default/node_modules/.pnpm/@types+node@17.0.41/node_modules/@types/node/README.md",
    "common/temp/default/node_modules/.pnpm/@types+node@17.0.41/node_modules/@types/node/assert.d.ts",
    "common/temp/default/node_modules/.pnpm/@types+node@17.0.41/node_modules/@types/node/assert/strict.d.ts",
    "common/temp/default/node_modules/.pnpm/@types+node@17.0.41/node_modules/@types/node/async_hooks.d.ts",
    "common/temp/default/node_modules/.pnpm/@types+node@17.0.41/node_modules/@types/node/buffer.d.ts",
    "common/temp/default/node_modules/.pnpm/@types+node@17.0.41/node_modules/@types/node/child_process.d.ts",
    "common/temp/default/node_modules/.pnpm/@types+node@17.0.41/node_modules/@types/node/cluster.d.ts",
    "common/temp/default/node_modules/.pnpm/@types+node@17.0.41/node_modules/@types/node/console.d.ts",
    "common/temp/default/node_modules/.pnpm/@types+node@17.0.41/node_modules/@types/node/constants.d.ts",
    "common/temp/default/node_modules/.pnpm/@types+node@17.0.41/node_modules/@types/node/crypto.d.ts",
    "common/temp/default/node_modules/.pnpm/@types+node@17.0.41/node_modules/@types/node/dgram.d.ts",
    "common/temp/default/node_modules/.pnpm/@types+node@17.0.41/node_modules/@types/node/diagnostics_channel.d.ts",
    "common/temp/default/node_modules/.pnpm/@types+node@17.0.41/node_modules/@types/node/dns.d.ts",
    "common/temp/default/node_modules/.pnpm/@types+node@17.0.41/node_modules/@types/node/dns/promises.d.ts",
    "common/temp/default/node_modules/.pnpm/@types+node@17.0.41/node_modules/@types/node/domain.d.ts",
    "common/temp/default/node_modules/.pnpm/@types+node@17.0.41/node_modules/@types/node/events.d.ts",
    "common/temp/default/node_modules/.pnpm/@types+node@17.0.41/node_modules/@types/node/fs.d.ts",
    "common/temp/default/node_modules/.pnpm/@types+node@17.0.41/node_modules/@types/node/fs/promises.d.ts",
    "common/temp/default/node_modules/.pnpm/@types+node@17.0.41/node_modules/@types/node/globals.d.ts",
    "common/temp/default/node_modules/.pnpm/@types+node@17.0.41/node_modules/@types/node/globals.global.d.ts",
    "common/temp/default/node_modules/.pnpm/@types+node@17.0.41/node_modules/@types/node/http.d.ts",
    "common/temp/default/node_modules/.pnpm/@types+node@17.0.41/node_modules/@types/node/http2.d.ts",
    "common/temp/default/node_modules/.pnpm/@types+node@17.0.41/node_modules/@types/node/https.d.ts",
    "common/temp/default/node_modules/.pnpm/@types+node@17.0.41/node_modules/@types/node/index.d.ts",
    "common/temp/default/node_modules/.pnpm/@types+node@17.0.41/node_modules/@types/node/inspector.d.ts",
    "common/temp/default/node_modules/.pnpm/@types+node@17.0.41/node_modules/@types/node/module.d.ts",
    "common/temp/default/node_modules/.pnpm/@types+node@17.0.41/node_modules/@types/node/net.d.ts",
    "common/temp/default/node_modules/.pnpm/@types+node@17.0.41/node_modules/@types/node/os.d.ts",
    "common/temp/default/node_modules/.pnpm/@types+node@17.0.41/node_modules/@types/node/package.json",
    "common/temp/default/node_modules/.pnpm/@types+node@17.0.41/node_modules/@types/node/path.d.ts",
    "common/temp/default/node_modules/.pnpm/@types+node@17.0.41/node_modules/@types/node/perf_hooks.d.ts",
    "common/temp/default/node_modules/.pnpm/@types+node@17.0.41/node_modules/@types/node/process.d.ts",
    "common/temp/default/node_modules/.pnpm/@types+node@17.0.41/node_modules/@types/node/punycode.d.ts",
    "common/temp/default/node_modules/.pnpm/@types+node@17.0.41/node_modules/@types/node/querystring.d.ts",
    "common/temp/default/node_modules/.pnpm/@types+node@17.0.41/node_modules/@types/node/readline.d.ts",
    "common/temp/default/node_modules/.pnpm/@types+node@17.0.41/node_modules/@types/node/repl.d.ts",
    "common/temp/default/node_modules/.pnpm/@types+node@17.0.41/node_modules/@types/node/stream.d.ts",
    "common/temp/default/node_modules/.pnpm/@types+node@17.0.41/node_modules/@types/node/stream/consumers.d.ts",
    "common/temp/default/node_modules/.pnpm/@types+node@17.0.41/node_modules/@types/node/stream/promises.d.ts",
    "common/temp/default/node_modules/.pnpm/@types+node@17.0.41/node_modules/@types/node/stream/web.d.ts",
    "common/temp/default/node_modules/.pnpm/@types+node@17.0.41/node_modules/@types/node/string_decoder.d.ts",
    "common/temp/default/node_modules/.pnpm/@types+node@17.0.41/node_modules/@types/node/timers.d.ts",
    "common/temp/default/node_modules/.pnpm/@types+node@17.0.41/node_modules/@types/node/timers/promises.d.ts",
    "common/temp/default/node_modules/.pnpm/@types+node@17.0.41/node_modules/@types/node/tls.d.ts",
    "common/temp/default/node_modules/.pnpm/@types+node@17.0.41/node_modules/@types/node/trace_events.d.ts",
    "common/temp/default/node_modules/.pnpm/@types+node@17.0.41/node_modules/@types/node/tty.d.ts",
    "common/temp/default/node_modules/.pnpm/@types+node@17.0.41/node_modules/@types/node/url.d.ts",
    "common/temp/default/node_modules/.pnpm/@types+node@17.0.41/node_modules/@types/node/util.d.ts",
    "common/temp/default/node_modules/.pnpm/@types+node@17.0.41/node_modules/@types/node/v8.d.ts",
    "common/temp/default/node_modules/.pnpm/@types+node@17.0.41/node_modules/@types/node/vm.d.ts",
    "common/temp/default/node_modules/.pnpm/@types+node@17.0.41/node_modules/@types/node/wasi.d.ts",
    "common/temp/default/node_modules/.pnpm/@types+node@17.0.41/node_modules/@types/node/worker_threads.d.ts",
    "common/temp/default/node_modules/.pnpm/@types+node@17.0.41/node_modules/@types/node/zlib.d.ts",
    "common/temp/default/node_modules/.pnpm/@types+node@18.17.15/node_modules/@types/node/LICENSE",
    "common/temp/default/node_modules/.pnpm/@types+node@18.17.15/node_modules/@types/node/README.md",
    "common/temp/default/node_modules/.pnpm/@types+node@18.17.15/node_modules/@types/node/assert.d.ts",
    "common/temp/default/node_modules/.pnpm/@types+node@18.17.15/node_modules/@types/node/assert/strict.d.ts",
    "common/temp/default/node_modules/.pnpm/@types+node@18.17.15/node_modules/@types/node/async_hooks.d.ts",
    "common/temp/default/node_modules/.pnpm/@types+node@18.17.15/node_modules/@types/node/buffer.d.ts",
    "common/temp/default/node_modules/.pnpm/@types+node@18.17.15/node_modules/@types/node/child_process.d.ts",
    "common/temp/default/node_modules/.pnpm/@types+node@18.17.15/node_modules/@types/node/cluster.d.ts",
    "common/temp/default/node_modules/.pnpm/@types+node@18.17.15/node_modules/@types/node/console.d.ts",
    "common/temp/default/node_modules/.pnpm/@types+node@18.17.15/node_modules/@types/node/constants.d.ts",
    "common/temp/default/node_modules/.pnpm/@types+node@18.17.15/node_modules/@types/node/crypto.d.ts",
    "common/temp/default/node_modules/.pnpm/@types+node@18.17.15/node_modules/@types/node/dgram.d.ts",
    "common/temp/default/node_modules/.pnpm/@types+node@18.17.15/node_modules/@types/node/diagnostics_channel.d.ts",
    "common/temp/default/node_modules/.pnpm/@types+node@18.17.15/node_modules/@types/node/dns.d.ts",
    "common/temp/default/node_modules/.pnpm/@types+node@18.17.15/node_modules/@types/node/dns/promises.d.ts",
    "common/temp/default/node_modules/.pnpm/@types+node@18.17.15/node_modules/@types/node/dom-events.d.ts",
    "common/temp/default/node_modules/.pnpm/@types+node@18.17.15/node_modules/@types/node/domain.d.ts",
    "common/temp/default/node_modules/.pnpm/@types+node@18.17.15/node_modules/@types/node/events.d.ts",
    "common/temp/default/node_modules/.pnpm/@types+node@18.17.15/node_modules/@types/node/fs.d.ts",
    "common/temp/default/node_modules/.pnpm/@types+node@18.17.15/node_modules/@types/node/fs/promises.d.ts",
    "common/temp/default/node_modules/.pnpm/@types+node@18.17.15/node_modules/@types/node/globals.d.ts",
    "common/temp/default/node_modules/.pnpm/@types+node@18.17.15/node_modules/@types/node/globals.global.d.ts",
    "common/temp/default/node_modules/.pnpm/@types+node@18.17.15/node_modules/@types/node/http.d.ts",
    "common/temp/default/node_modules/.pnpm/@types+node@18.17.15/node_modules/@types/node/http2.d.ts",
    "common/temp/default/node_modules/.pnpm/@types+node@18.17.15/node_modules/@types/node/https.d.ts",
    "common/temp/default/node_modules/.pnpm/@types+node@18.17.15/node_modules/@types/node/index.d.ts",
    "common/temp/default/node_modules/.pnpm/@types+node@18.17.15/node_modules/@types/node/inspector.d.ts",
    "common/temp/default/node_modules/.pnpm/@types+node@18.17.15/node_modules/@types/node/module.d.ts",
    "common/temp/default/node_modules/.pnpm/@types+node@18.17.15/node_modules/@types/node/net.d.ts",
    "common/temp/default/node_modules/.pnpm/@types+node@18.17.15/node_modules/@types/node/os.d.ts",
    "common/temp/default/node_modules/.pnpm/@types+node@18.17.15/node_modules/@types/node/package.json",
    "common/temp/default/node_modules/.pnpm/@types+node@18.17.15/node_modules/@types/node/path.d.ts",
    "common/temp/default/node_modules/.pnpm/@types+node@18.17.15/node_modules/@types/node/perf_hooks.d.ts",
    "common/temp/default/node_modules/.pnpm/@types+node@18.17.15/node_modules/@types/node/process.d.ts",
    "common/temp/default/node_modules/.pnpm/@types+node@18.17.15/node_modules/@types/node/punycode.d.ts",
    "common/temp/default/node_modules/.pnpm/@types+node@18.17.15/node_modules/@types/node/querystring.d.ts",
    "common/temp/default/node_modules/.pnpm/@types+node@18.17.15/node_modules/@types/node/readline.d.ts",
    "common/temp/default/node_modules/.pnpm/@types+node@18.17.15/node_modules/@types/node/readline/promises.d.ts",
    "common/temp/default/node_modules/.pnpm/@types+node@18.17.15/node_modules/@types/node/repl.d.ts",
    "common/temp/default/node_modules/.pnpm/@types+node@18.17.15/node_modules/@types/node/stream.d.ts",
    "common/temp/default/node_modules/.pnpm/@types+node@18.17.15/node_modules/@types/node/stream/consumers.d.ts",
    "common/temp/default/node_modules/.pnpm/@types+node@18.17.15/node_modules/@types/node/stream/promises.d.ts",
    "common/temp/default/node_modules/.pnpm/@types+node@18.17.15/node_modules/@types/node/stream/web.d.ts",
    "common/temp/default/node_modules/.pnpm/@types+node@18.17.15/node_modules/@types/node/string_decoder.d.ts",
    "common/temp/default/node_modules/.pnpm/@types+node@18.17.15/node_modules/@types/node/test.d.ts",
    "common/temp/default/node_modules/.pnpm/@types+node@18.17.15/node_modules/@types/node/timers.d.ts",
    "common/temp/default/node_modules/.pnpm/@types+node@18.17.15/node_modules/@types/node/timers/promises.d.ts",
    "common/temp/default/node_modules/.pnpm/@types+node@18.17.15/node_modules/@types/node/tls.d.ts",
    "common/temp/default/node_modules/.pnpm/@types+node@18.17.15/node_modules/@types/node/trace_events.d.ts",
    "common/temp/default/node_modules/.pnpm/@types+node@18.17.15/node_modules/@types/node/ts4.8/assert.d.ts",
    "common/temp/default/node_modules/.pnpm/@types+node@18.17.15/node_modules/@types/node/ts4.8/assert/strict.d.ts",
    "common/temp/default/node_modules/.pnpm/@types+node@18.17.15/node_modules/@types/node/ts4.8/async_hooks.d.ts",
    "common/temp/default/node_modules/.pnpm/@types+node@18.17.15/node_modules/@types/node/ts4.8/buffer.d.ts",
    "common/temp/default/node_modules/.pnpm/@types+node@18.17.15/node_modules/@types/node/ts4.8/child_process.d.ts",
    "common/temp/default/node_modules/.pnpm/@types+node@18.17.15/node_modules/@types/node/ts4.8/cluster.d.ts",
    "common/temp/default/node_modules/.pnpm/@types+node@18.17.15/node_modules/@types/node/ts4.8/console.d.ts",
    "common/temp/default/node_modules/.pnpm/@types+node@18.17.15/node_modules/@types/node/ts4.8/constants.d.ts",
    "common/temp/default/node_modules/.pnpm/@types+node@18.17.15/node_modules/@types/node/ts4.8/crypto.d.ts",
    "common/temp/default/node_modules/.pnpm/@types+node@18.17.15/node_modules/@types/node/ts4.8/dgram.d.ts",
    "common/temp/default/node_modules/.pnpm/@types+node@18.17.15/node_modules/@types/node/ts4.8/diagnostics_channel.d.ts",
    "common/temp/default/node_modules/.pnpm/@types+node@18.17.15/node_modules/@types/node/ts4.8/dns.d.ts",
    "common/temp/default/node_modules/.pnpm/@types+node@18.17.15/node_modules/@types/node/ts4.8/dns/promises.d.ts",
    "common/temp/default/node_modules/.pnpm/@types+node@18.17.15/node_modules/@types/node/ts4.8/dom-events.d.ts",
    "common/temp/default/node_modules/.pnpm/@types+node@18.17.15/node_modules/@types/node/ts4.8/domain.d.ts",
    "common/temp/default/node_modules/.pnpm/@types+node@18.17.15/node_modules/@types/node/ts4.8/events.d.ts",
    "common/temp/default/node_modules/.pnpm/@types+node@18.17.15/node_modules/@types/node/ts4.8/fs.d.ts",
    "common/temp/default/node_modules/.pnpm/@types+node@18.17.15/node_modules/@types/node/ts4.8/fs/promises.d.ts",
    "common/temp/default/node_modules/.pnpm/@types+node@18.17.15/node_modules/@types/node/ts4.8/globals.d.ts",
    "common/temp/default/node_modules/.pnpm/@types+node@18.17.15/node_modules/@types/node/ts4.8/globals.global.d.ts",
    "common/temp/default/node_modules/.pnpm/@types+node@18.17.15/node_modules/@types/node/ts4.8/http.d.ts",
    "common/temp/default/node_modules/.pnpm/@types+node@18.17.15/node_modules/@types/node/ts4.8/http2.d.ts",
    "common/temp/default/node_modules/.pnpm/@types+node@18.17.15/node_modules/@types/node/ts4.8/https.d.ts",
    "common/temp/default/node_modules/.pnpm/@types+node@18.17.15/node_modules/@types/node/ts4.8/index.d.ts",
    "common/temp/default/node_modules/.pnpm/@types+node@18.17.15/node_modules/@types/node/ts4.8/inspector.d.ts",
    "common/temp/default/node_modules/.pnpm/@types+node@18.17.15/node_modules/@types/node/ts4.8/module.d.ts",
    "common/temp/default/node_modules/.pnpm/@types+node@18.17.15/node_modules/@types/node/ts4.8/net.d.ts",
    "common/temp/default/node_modules/.pnpm/@types+node@18.17.15/node_modules/@types/node/ts4.8/os.d.ts",
    "common/temp/default/node_modules/.pnpm/@types+node@18.17.15/node_modules/@types/node/ts4.8/path.d.ts",
    "common/temp/default/node_modules/.pnpm/@types+node@18.17.15/node_modules/@types/node/ts4.8/perf_hooks.d.ts",
    "common/temp/default/node_modules/.pnpm/@types+node@18.17.15/node_modules/@types/node/ts4.8/process.d.ts",
    "common/temp/default/node_modules/.pnpm/@types+node@18.17.15/node_modules/@types/node/ts4.8/punycode.d.ts",
    "common/temp/default/node_modules/.pnpm/@types+node@18.17.15/node_modules/@types/node/ts4.8/querystring.d.ts",
    "common/temp/default/node_modules/.pnpm/@types+node@18.17.15/node_modules/@types/node/ts4.8/readline.d.ts",
    "common/temp/default/node_modules/.pnpm/@types+node@18.17.15/node_modules/@types/node/ts4.8/readline/promises.d.ts",
    "common/temp/default/node_modules/.pnpm/@types+node@18.17.15/node_modules/@types/node/ts4.8/repl.d.ts",
    "common/temp/default/node_modules/.pnpm/@types+node@18.17.15/node_modules/@types/node/ts4.8/stream.d.ts",
    "common/temp/default/node_modules/.pnpm/@types+node@18.17.15/node_modules/@types/node/ts4.8/stream/consumers.d.ts",
    "common/temp/default/node_modules/.pnpm/@types+node@18.17.15/node_modules/@types/node/ts4.8/stream/promises.d.ts",
    "common/temp/default/node_modules/.pnpm/@types+node@18.17.15/node_modules/@types/node/ts4.8/stream/web.d.ts",
    "common/temp/default/node_modules/.pnpm/@types+node@18.17.15/node_modules/@types/node/ts4.8/string_decoder.d.ts",
    "common/temp/default/node_modules/.pnpm/@types+node@18.17.15/node_modules/@types/node/ts4.8/test.d.ts",
    "common/temp/default/node_modules/.pnpm/@types+node@18.17.15/node_modules/@types/node/ts4.8/timers.d.ts",
    "common/temp/default/node_modules/.pnpm/@types+node@18.17.15/node_modules/@types/node/ts4.8/timers/promises.d.ts",
    "common/temp/default/node_modules/.pnpm/@types+node@18.17.15/node_modules/@types/node/ts4.8/tls.d.ts",
    "common/temp/default/node_modules/.pnpm/@types+node@18.17.15/node_modules/@types/node/ts4.8/trace_events.d.ts",
    "common/temp/default/node_modules/.pnpm/@types+node@18.17.15/node_modules/@types/node/ts4.8/tty.d.ts",
    "common/temp/default/node_modules/.pnpm/@types+node@18.17.15/node_modules/@types/node/ts4.8/url.d.ts",
    "common/temp/default/node_modules/.pnpm/@types+node@18.17.15/node_modules/@types/node/ts4.8/util.d.ts",
    "common/temp/default/node_modules/.pnpm/@types+node@18.17.15/node_modules/@types/node/ts4.8/v8.d.ts",
    "common/temp/default/node_modules/.pnpm/@types+node@18.17.15/node_modules/@types/node/ts4.8/vm.d.ts",
    "common/temp/default/node_modules/.pnpm/@types+node@18.17.15/node_modules/@types/node/ts4.8/wasi.d.ts",
    "common/temp/default/node_modules/.pnpm/@types+node@18.17.15/node_modules/@types/node/ts4.8/worker_threads.d.ts",
    "common/temp/default/node_modules/.pnpm/@types+node@18.17.15/node_modules/@types/node/ts4.8/zlib.d.ts",
    "common/temp/default/node_modules/.pnpm/@types+node@18.17.15/node_modules/@types/node/tty.d.ts",
    "common/temp/default/node_modules/.pnpm/@types+node@18.17.15/node_modules/@types/node/url.d.ts",
    "common/temp/default/node_modules/.pnpm/@types+node@18.17.15/node_modules/@types/node/util.d.ts",
    "common/temp/default/node_modules/.pnpm/@types+node@18.17.15/node_modules/@types/node/v8.d.ts",
    "common/temp/default/node_modules/.pnpm/@types+node@18.17.15/node_modules/@types/node/vm.d.ts",
    "common/temp/default/node_modules/.pnpm/@types+node@18.17.15/node_modules/@types/node/wasi.d.ts",
    "common/temp/default/node_modules/.pnpm/@types+node@18.17.15/node_modules/@types/node/worker_threads.d.ts",
    "common/temp/default/node_modules/.pnpm/@types+node@18.17.15/node_modules/@types/node/zlib.d.ts",
    "foo/bar/baz.js",
  ],
  "links": Array [
    Object {
      "kind": "folderLink",
      "linkPath": "build-tests/package-extractor-test-01/node_modules/@types/node",
      "targetPath": "common/temp/default/node_modules/.pnpm/@types+node@18.17.15/node_modules/@types/node",
    },
    Object {
      "kind": "folderLink",
      "linkPath": "build-tests/package-extractor-test-01/node_modules/package-extractor-test-02",
      "targetPath": "build-tests/package-extractor-test-02",
    },
    Object {
      "kind": "folderLink",
      "linkPath": "build-tests/package-extractor-test-01/node_modules/package-extractor-test-03",
      "targetPath": "build-tests/package-extractor-test-03",
    },
    Object {
      "kind": "folderLink",
      "linkPath": "build-tests/package-extractor-test-02/node_modules/package-extractor-test-03",
      "targetPath": "build-tests/package-extractor-test-03",
    },
    Object {
      "kind": "folderLink",
      "linkPath": "build-tests/package-extractor-test-03/node_modules/@types/node",
      "targetPath": "common/temp/default/node_modules/.pnpm/@types+node@17.0.41/node_modules/@types/node",
    },
  ],
  "mainProjectName": "package-extractor-test-01",
  "projects": Array [
    Object {
      "path": "build-tests/package-extractor-test-01",
      "projectName": "package-extractor-test-01",
    },
    Object {
      "path": "build-tests/package-extractor-test-02",
      "projectName": "package-extractor-test-02",
    },
    Object {
      "path": "build-tests/package-extractor-test-03",
      "projectName": "package-extractor-test-03",
    },
  ],
}
`;
